fix: dark mode color when loading page

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -21,6 +21,7 @@
   caret-color: rgb(55, 53, 47);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
     'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
+  background-color: var(--bg-color);
 }
 
 .loadingIcon {
